# indoor-robot-urdf

workspace/src/bridge_example/: CMakeLists.txt  package.xml
workspace/src/bridge_example/launch/: base.launch  print_lidar.launch
workspace/src/bridge_example/src/: lidar_print.cc
workspace/src/robot_gazebo/: CMakeLists.txt  package.xml
workspace/src/robot_gazebo/launch/: plugin_hello.launch
