<?xml version="1.0"?>
<package format="2">
  <name>robot_gazebo</name>
  <version>0.0.1</version>
  <description>
   Package for launching Gazebo simulations.
  </description>
  <license>MIT-0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
